4.1.3
Fixed bug: HTML entities in feed item titles are now being decoded.

4.1.2 (2014-04-22)
Enhanced: Improved the custom feed, by allowing a custom title.
Enhanced: Improved shortcode, by adding the "pagination" parameter.
Enhanced: Modified a filter to fix some bugs in the add-ons.

4.1.1 (2014-04-09)
Enhanced: Tracking notices only appear for admin users.
Fixed bug: Auto Feed Discovery was not working.

4.1 (2014-04-03)
New Feature: Feed items can now link to enclosure links in the feed.
Enhanced: Added a filter to allow add-ons to modify feed item queries.

4.0.9 (2014-03-27)
Enhanced: Added a filter to modify the feeds template.
Fixed bug: Nested lists in feeds template.

4.0.8 (2014-03-20)
Enhanced: Fetch feeds row action now registers a cron job.
Enhanced: Increased fetch feed timeout to 30 seconds.
Fixed bug: Using the shortcode makes the comments section always open.

4.0.7 (2014-03-08)
Fixed bug: The plugin prevented uploading of header images.

4.0.6 (2014-03-05)
Fixed bug: Hook change in last version suspected reason for some installations having non-updated feed items.

4.0.5 (2014-03-03)
New Feature: Time ago added as an option.
Enhanced: The plugin now allows the use of RSS and Atom feeds that do not specify the correct MIME type.
Enhanced: Better performance due to better hook usage.
Fixed bug: Facebook page feed URL conversion was not being triggered for new feed sources.
Fixed bug: Styles fix for pagination.
Fixed bug: Removed empty spaces in logging.

4.0.4 (2014-02-22)
Enhanced: Added Activate/Pause bulk actions in the Feed Sources page.
Enhanced: Feed Sources page table has been re-designed.
Enhanced: Logging is now site dependant on multisite.
Fixed bug: Undefined display settings where appearing on the front end.

4.0.3 (2014-02-12)
Fixed bug: The general setting for deleting feed items by age was not working.

4.0.2 (2014-02-10)
Enhanced: Added a filter to change the html tags allowed in feed item content.

4.0.1 (2014-02-08)