@@ -184,7 +184,17 @@
 
 		$feed->set_feed_url( $url );
 		$feed->set_autodiscovery_level( SIMPLEPIE_LOCATOR_ALL );
-		//$feed->force_feed( TRUE );
+
+		// If a feed source was passed
+		if ( $source !== NULL ) {
+			// Get the force feed option for the feed source
+			$force_feed = get_post_meta( $source, 'wprss_force_feed', TRUE );
+			// If turned on, force the feed
+			if ( $force_feed == 'true' ) {
+				$feed->force_feed( TRUE );
+			}
+		}
+		
 		$feed->set_timeout( 30 );
 
 		//$feed->set_cache_duration( apply_filters( 'wp_feed_cache_transient_lifetime', 12 * HOUR_IN_SECONDS, $url ) );
