@@ -1,4 +1,5 @@
 4.1.3
+Enhanced: Added a force feed option, for valid RSS feeds with incorrect header content types.
 Fixed bug: HTML entities in feed item titles are now being decoded.
 
 4.1.2 (2014-04-22)
